# LinuxProcessMonitor

./: CMakeLists.txt  Makefile  README.md
file_parser/: CMakeLists.txt
file_parser/include/: file_parser.h
file_parser/src/: file_parser.cpp
include/: format.h  linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
